<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it1901.nachwithme</groupId>
	<artifactId>parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencyManagement>
		<dependencies>
			<!-- JavaFX -->
			<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-fxml</artifactId>
				<version>16-ea+2</version>
			</dependency>
			<!-- Test with JUnit5 -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
<!--				<scope>test</scope>-->
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>5.7.0</version>
<!--				<scope>test</scope>-->
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>5.7.0</version>
<!--				<scope>test</scope>-->
			</dependency>
			<!-- Test with TextFX -->
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-core</artifactId>
				<version>4.0.16-alpha</version>
<!--				<scope>test</scope>-->
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-junit5</artifactId>
				<version>4.0.16-alpha</version>
<!--				<scope>test</scope>-->
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.testfx/testfx-junit -->
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-junit</artifactId>
				<version>4.0.1-alpha</version>
<!--				<scope>test</scope>-->
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.testng/testng -->
			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>7.3.0</version>
<!--				<scope>test</scope>-->
			</dependency>
			<!-- https://sites.google.com/site/gson/gson-user-guide -->
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.8.6</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<!-- Plugins used by all modules in the project -->
			<plugins>
				<!-- Compiling code -->
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<release>14</release>
					</configuration>
				</plugin>
				<!-- Running tests -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
					<configuration>
						<redirectTestOutputToFile>true</redirectTestOutputToFile>
						<argLine>--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
					</configuration>
				</plugin>
				<!-- Running JavaFX code -->
				<plugin>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-maven-plugin</artifactId>
					<version>0.0.4</version>
					<configuration>
						<mainClass>ui.java.App</mainClass>
					</configuration>
				</plugin>
				<!-- Jacoco docs: https://www.jacoco.org/jacoco/trunk/doc/ -->
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.5</version>
				</plugin>
				<!-- Maven checkstyle docs: https://maven.apache.org/plugins/maven-checkstyle-plugin/plugin-info.html -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<!-- Maven spotbugs docs: https://spotbugs.github.io/spotbugs-maven-plugin/plugin-info.html -->
				<plugin>
					<groupId>com.github.spotbugs</groupId>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<version>4.0.4</version>
					<dependencies>
						<!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
						<dependency>
							<groupId>com.github.spotbugs</groupId>
							<artifactId>spotbugs-maven-plugin</artifactId>
							<version>4.0.4</version>
						</dependency>
					</dependencies>
				</plugin>
				<!-- https://maven.apache.org/guides/mini/guide-attached-tests.html -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
					<executions>
						<execution>
							<goals>
								<goal>test-jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<modules>
		<module>ui</module>
		<module>core</module>
		<module>data</module>
	</modules>
</project>
